Fixed bug with delete popup not appearing after navigating back to the explorer page. Also fixed a console error stemming from the edit form being populated with undefined values. Lastly, made a small change to the artifact cards to avoid cutting off content.

--- a/src/styles/specimensExplorer.css
+++ b/src/styles/specimensExplorer.css
@@ -267,12 +267,15 @@
   display: grid;
   padding: 0.5rem;
   grid-template-rows: 1fr 1fr;
+  box-sizing: border-box;
+  width: 100%;
   h3 {
     margin: 0;
     font-weight: 500;
     color: #333;
     white-space: nowrap;
     grid-column: 1/3;
+    font-size: 16px;
   }
 
   p {
@@ -280,7 +283,7 @@
     margin: 0;
     grid-row: 2/2;
     align-self: center;
-    font-size: 16px;
+    font-size: 12px;
   }
 }
 
